# tradecat

./: .gitignore  AGENTS.md  CONSTITUTION.md  Makefile  README.md  README_EN.md  artifacts  compute  consumption  ingestion  mkdocs.yml  pyproject.toml  tasks
.github/: pull_request_template.md
config/: .env.example
services/ingestion/binance-vision-service/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/ingestion/binance-vision-service/scripts/: capture_ccxt_pro_um_book_data.py  start.sh
services/ingestion/binance-vision-service/src/: __init__.py  __main__.py  config.py
services/ingestion/binance-vision-service/src/collectors/crypto/: __init__.py
services/ingestion/binance-vision-service/src/collectors/crypto/data/: __init__.py
services/ingestion/binance-vision-service/src/collectors/crypto/data_download/: __init__.py  _plan_utils.py  _zip_utils.py
services/ingestion/binance-vision-service/src/collectors/crypto/repair/: __init__.py
services/ingestion/binance-vision-service/src/runtime/: __init__.py  ccxt_pro_compat.py  decimal_utils.py  download_utils.py  time_utils.py  vision_paths.py
services/ingestion/binance-vision-service/src/writers/: __init__.py  core_registry.py  csv_appender.py  import_meta.py  ingest_meta.py  pg.py  raw_futures_cm_trades.py  raw_futures_um_book_depth.py  raw_futures_um_book_ticker.py  raw_futures_um_trades.py  raw_spot_trades.py  storage_files.py
services/ingestion/binance-vision-service/tests/: test_checksum_utils.py  test_futures_um_trades_backfill_plan.py  test_futures_um_trades_download_repair.py  test_futures_um_trades_fields.py  test_repair_gap_date_range.py
(+903 files in other folders)
